# python-interface-coppeliasim-zmq

./: .gitmodules  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/scripts/: basic_eval.py  basic_eval.sh
.github/workflows/: python_package.yml
dqrobotics/interfaces/coppeliasim/: __init__.py
src/: module.cpp  module.h
src/interfaces/coppeliasim/: DQ_CoppeliaSimInterfaceZMQ_py.cpp  DQ_CoppeliaSimInterface_py.cpp
